RESOLVED FIXED297943
[Liquid Glass] [iOS] Swipe-back snapshot misaligned after closing sidebar
https://bugs.webkit.org/show_bug.cgi?id=297943
Summary [Liquid Glass] [iOS] Swipe-back snapshot misaligned after closing sidebar
Wenson Hsieh
Reported 2025-08-26 18:19:57 PDT
Attachments
Wenson Hsieh
Comment 1 2025-08-26 18:44:54 PDT
EWS
Comment 2 2025-08-26 21:20:30 PDT
Committed 299185@main (c495a3af9e9a): <https://commits.webkit.org/299185@main> Reviewed commits have been landed. Closing PR #49914 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.