Source/WebKit/UIProcess/PageClient.h
@@ -598,6 +598,7 @@ public:
 
     virtual bool isSimulatingCompatibilityPointerTouches() const = 0;
 
+    virtual WebCore::FloatBoxExtent computedObscuredInset() const = 0;
     virtual WebCore::Color contentViewBackgroundColor() = 0;
     virtual WebCore::Color insertionPointColor() = 0;
     virtual bool isScreenBeingCaptured() = 0;
