Source/WebKit/UIProcess/ios/PageClientImplIOS.h
@@ -330,6 +330,7 @@ private:
 
     bool isSimulatingCompatibilityPointerTouches() const final;
 
+    WebCore::FloatBoxExtent computedObscuredInset() const final;
     WebCore::Color contentViewBackgroundColor() final;
     WebCore::Color insertionPointColor() final;
     bool isScreenBeingCaptured() final;
